--- a/fundslist.yaml
+++ b/fundslist.yaml
@@ -89,7 +89,10 @@ funds:
 - Taurus-Flexi-Cap-Fund-Regular-Plan-Growth
 #Equity:Focused
 - Invesco-India-Focused-20-Equity-Fund-Growth
+- Invesco-India-Focused-Fund-Growth
+- Tata-Focused-Equity-Fund-Regular-Plan-Growth
 - HDFC-Focused-30-Fund-GROWTH-PLAN
+- JM-Focused-Fund-Regular-Growth-Option
 - ICICI-Prudential-Focused-Equity-Fund-Growth
 - Mahindra-Manulife-Focused-Fund-Regular-Plan-Growth
 - UTI-Focused-Fund-Regular-Plan-Growth-Option
@@ -109,6 +112,8 @@ funds:
 - LIC-MF-Focused-Fund-Regular-Plan-Growth
 - Axis-Focused-Fund-Regular-Plan-Growth-Option
 - ITI-Focused-Equity-Fund-Regular-Plan-Growth
+- ICICI-Prudential-BHARAT-22-FOF-Cumulative-Option
+- 360-ONE-Focused-Equity-Fund-Regular-Plan-Growth
 #Equity:Large-and-Mid-Cap
 - Motilal-Oswal-Large-and-Midcap-Fund-Regular-Plan-Growth
 - HDFC-Large-and-Mid-Cap-Fund-Growth-Option
@@ -155,6 +160,8 @@ funds:
 - Axis-Bluechip-Fund-Regular-Plan-Growth
 - LIC-MF-Large-Cap-Fund-Regular-Plan-Growth
 - WhiteOak-Capital-Large-Cap-Fund-Regular-Plan-Growth
+- Tata-Large-Cap-Fund-Regular-Plan-Growth-Option
+- JM-Large-Cap-Fund-Regular-Growth-Option
 #Equity:Mid-Cap
 - HDFC-Mid-Cap-Opportunities-Fund-Growth-Plan
 - Nippon-India-Growth-Fund-Growth-Plan-Growth-Option
@@ -178,8 +185,12 @@ funds:
 - ICICI-Prudential-MidCap-Fund-Growth
 - Axis-Midcap-Fund-Regular-Plan-Growth
 - Canara-Robeco-Mid-Cap-Fund-Regular-Plan-Growth-Option
+- PGIM-India-Midcap-Opportunities-Fund-Regular-Plan-Growth-Option
+- Sundaram-Mid-Cap-Fund-Regular-Plan-Growth
+- Tata-Mid-Cap-Growth-Fund-Regular-Plan-Growth-Option
 #Equity:Multi-Cap
 - HDFC-Multi-Cap-Fund-Growth-Option
+- DSP-Multicap-Fund-Regular-Growth
 - Nippon-India-Multi-Cap-Fund-Growth-Plan-Growth-Option
 - Kotak-Multicap-Fund-Regular-Plan-Growth
 - ITI-Multi-Cap-Fund-Regular-Plan-Growth-Option
@@ -198,26 +209,34 @@ funds:
 - Mirae-Asset-Multicap-Fund-Regular-Plan-Growth
 - WhiteOak-Capital-Multi-Cap-Fund-Regular-Plan-Growth
 - Edelweiss-Multi-Cap-Fund-Regular-Plan-Growth
+- Motilal-Oswal-Multi-Cap-Fund-Regular-Plan-Growth
+- Sundaram-Multi-Cap-Fund-Formerly-Known-as-Principal-Multi-Cap-Growth-Fund-Growth-Option
 #Equity:Sectoral-Banking-and-Financial-Services
 - Invesco-India-Financial-Services-Fund-Retail-Growth
 - Nippon-India-Banking-and-Financial-Services-Fund-Growth-Plan-Growth-Option
+- Sundaram-Financial-Services-Opportunities-Fund-Regular-Plan-Growth
 - HDFC-Banking-and-Financial-Services-Fund-Growth-Option
 - Aditya-Birla-Sun-Life-Banking-and-Financial-Services-Fund-Regular-Plan-Growth
 - Mirae-Asset-Banking-and-Financial-Services-Fund-Regular-Growth
 - ICICI-Prudential-Banking-and-Financial-Services-Fund-Growth
 - LIC-MF-Banking-And-Financial-Services-Fund-Regular-Plan-Growth
 - SBI-Banking-Financial-Services-Fund-Regular-Plan-Growth
+- Taurus-Banking-Financial-Services-Fund-Regular-Plan-Growth
+- Tata-Banking-And-Financial-Services-Fund-Regular-Plan-Growth
 - Baroda-BNP-Paribas-Banking-and-Financial-Services-Fund-Regular-Growth-Option
 - UTI-Banking-and-Financial-Services-Fund-Regular-Plan-Growth-Option
 - ITI-Banking-and-Financial-Services-Fund-Regular-Plan-Growth-Option
 - Kotak-Banking-Financial-Services-Fund-Regular-Plan-Growth
 - quant-BFSI-Fund-Growth-Option-Regular-Plan
+- Mirae-Asset-Banking-and-Financial-Services-Fund-Regular-Growth
 - BANDHAN-FINANCIAL-SERVICES-FUND-REGULAR-PLAN-GROWTH
 #Equity:Sectoral-FMCG
 - ICICI-Prudential-FMCG-Fund-Growth
 #Equity:Sectoral-Infrastructure
 - HDFC-Infrastructure-Fund-Growth-Plan
+- DSP-India-T-I-G-E-R-Fund-Regular-Plan-Growth
 - Nippon-India-Power-Infra-Fund-Growth-Plan-Growth-Option
+- DSP-Natural-Resources-And-New-Energy-Fund-Regular-Growth
 - SBI-Infrastructure-Fund-Regular-Plan-Growth
 - BANDHAN-Infrastructure-Fund-Regular-Plan-Growth
 - Franklin-Build-India-Fund-Growth-Plan
@@ -229,6 +248,7 @@ funds:
 - Kotak-Infrastructure-Economic-Reform-Fund-Standard-Plan-Growth
 - Canara-Robeco-Infrastructure-Fund-Regular-Plan-Growth-Option
 - UTI-Infrastructure-Fund-Growth-Option
+- Tata-Infrastructure-Fund-Regular-Plan-Growth-Option
 - Quant-Infrastructure-Fund-Growth-Option
 #Equity:Sectoral-Pharma-and-Healthcare
 - Nippon-India-Pharma-Fund-Growth-Plan-Growth-Option
@@ -240,15 +260,21 @@ funds:
 - LIC-MF-Healthcare-Fund-Regular-Plan-Growth
 - quant-Healthcare-Fund-Growth-Option-Regular-Plan
 - HDFC-Pharma-and-Healthcare-Fund-Growth-Option
+- Tata-India-Pharma-Healthcare-Fund-Regular-Plan-Growth
+- DSP-Healthcare-Fund-Regular-Plan-Growth
+- ICICI-Prudential-Pharma-Healthcare-and-Diagnostics-P-H-D-Fund-Cumulative-Option
 #Equity:Sectoral-Technology
 - Franklin-India-Technology-Fund-Growth
 - Aditya-Birla-Sun-Life-Digital-India-Fund-Growth-Regular-Plan
 - ICICI-Prudential-Technology-Fund-Growth
 - SBI-Technology-Opportunities-Fund-Regular-Plan-Growth
 - HDFC-Technology-Fund-Growth-Option
-- HDFC-Technology-Fund-IDCW-Option
 - quant-Teck-Fund-Growth-Option-Regular-Plan
+- Tata-Digital-India-Fund-Regular-Plan-Growth
+- Kotak-Technology-Fund-Regular-Plan-Growth-Option
+- Edelweiss-Technology-Fund-Regular-Plan-Growth
 #Equity:Small-Cap
+- BANDHAN-SMALL-CAP-FUND-REGULAR-PLAN-GROWTH
 - Franklin-India-Smaller-Companies-Fund-Growth
 - BANDHAN-EMERGING-BUSINESSES-FUND-REGULAR-PLAN-GROWTH
 - ITI-Small-Cap-Fund-Regular-Plan-Growth-Option
@@ -268,6 +294,10 @@ funds:
 - SBI-Small-Cap-Fund-Regular-Plan-Growth
 - Mahindra-Manulife-Small-Cap-Fund-Regular-Plan-Growth
 - Baroda-BNP-Paribas-Small-Cap-Fund-Regular-Plan-Growth-option
+- Tata-Small-Cap-Fund-Regular-Plan-Growth
+- BANK-OF-INDIA-Small-Cap-Fund-Regular-Plan-Growth
+- Invesco-India-Smallcap-Fund-Regular-Plan-Growth
+- Nippon-India-Nifty-Smallcap-250-Index-Fund-Regular-Plan-Growth-Option
 #Equity:Thematic-Consumption
 - Mirae-Asset-Great-Consumer-Fund-Regular-Plan-Growth-option
 - ICICI-Prudential-Bharat-Consumption-Fund-Growth-Option
@@ -276,18 +306,23 @@ funds:
 - Mahindra-Manulife-Consumption-Fund-Regular-Plan-Growth
 - Canara-Robeco-Consumer-Trends-Fund-Regular-Plan-Growth-Option
 - Nippon-India-Consumption-Fund-Growth-Plan-Growth-Option
+- Tata-India-Consumer-Fund-Regular-Plan-Growth
 - Aditya-Birla-Sun-Life-India-Gennext-Fund-Growth-Option
 - UTI-India-Consumer-Fund-Regular-Plan-Growth-Option
 - HDFC-Non-Cyclical-Consumer-Fund-Growth-Option
 - HSBC-Consumption-Fund-Regular-Growth
+- Sundaram-Consumption-Fund-Formerly-Known-as-Sundaram-Rural-and-Consumption-Fund-Regular-Plan-Growth
+- ICICI-Prudential-Commodities-Fund-Growth-Option
 #Equity:Thematic-ESG
 - ICICI-Prudential-ESG-FUND-Growth
 - Quant-ESG-Equity-Fund-Growth-Option-Regular-Plan
+- ICICI-Prudential-ESG-Exclusionary-Strategy-Fund-Growth
 - Axis-ESG-Equity-Fund-Regular-Plan-Growth-Option
 - Invesco-India-ESG-Equity-Fund-Growth
 - SBI-Magnum-Equity-ESG-Fund-REGULAR-PLAN-Growth
 - Kotak-ESG-Opportunities-Fund-Regular-Plan-Growth-Option
 - Aditya-Birla-Sun-Life-ESG-Fund-Regular-Plan-Growth
+- QUANTUM-ESG-BEST-IN-CLASS-STRATEGY-FUND-REGULAR-PLAN-GROWTH-OPTION
 #Equity:Thematic-International
 - Nippon-India-US-Equity-Opportunites-Fund-Growth-Plan-Growth-Option
 - ICICI-Prudential-US-Bluechip-Equity-Fund-Growth
@@ -296,6 +331,7 @@ funds:
 - Franklin-Asian-Equity-Fund-Growth-Plan
 #Equity:Thematic-MNC
 - ICICI-Prudential-MNC-Fund-Growth-Option
+- ICICI-PRUDENTIAL-TRANSPORTATION-AND-LOGISTICS-FUND-Growth
 - Aditya-Birla-Sun-Life-MNC-Fund-Growth-Regular-Plan
 - SBI-Magnum-Global-Fund-Regular-Plan-Growth
 - UTI-MNC-Fund-Regular-Plan-Growth-Option
@@ -309,10 +345,16 @@ funds:
 - ICICI-Prudential-India-Opportunities-Fund-Cumulative-Option
 - UTI-Transpotation-and-Logistics-Fund-Growth-Option
 - Kotak-Pioneer-Fund-Regular-Plan-Growth-Option
+- UTI-Transpotation-and-Logistics-Fund-Growth-Option
+- ICICI-PRUDENTIAL-TRANSPORTATION-AND-LOGISTICS-FUND-Growth
+- BANDHAN-TRANSPORTATION-AND-LOGISTICS-FUND-GROWTH-REGULAR-PLAN
+- HDFC-Transportation-and-Logistics-Fund-Growth-Option
 - HSBC-Business-Cycles-Fund-Regular-Growth
 - Kotak-Manufacture-in-India-Fund-Regular-Plan-Growth
 - ICICI-Prudential-Business-Cycle-Fund-Growth
 - ICICI-Prudential-Housing-Opportunities-Fund-Growth
+- Aditya-Birla-Sun-Life-Transportation-and-Logistics-Fund-Regular-Growth
+- SBI-Automotive-Opportunities-Fund-Regular-Plan-Growth
 - ICICI-Prudential-Commodities-Fund-Growth-Option
 - Aditya-Birla-Sun-Life-Manufacturing-Equity-Fund-Regular-Plan-Growth
 - ICICI-Prudential-Exports-Services-Fund-Growth
@@ -334,6 +376,7 @@ funds:
 - Nippon-India-Innovation-Fund-Regular-Plan-Growth-Option
 - Mahindra-Manulife-Business-Cycle-Fund-Regular-Plan-Growth
 - UTI-Innovation-Fund-Regular-Plan-Growth-Option
+- HDFC-Housing-Opportunities-Fund-Growth-Option
 #Equity:Thematic-PSU
 - Aditya-Birla-Sun-Life-PSU-Equity-Fund-Regular-Plan-Growth
 - Invesco-India-PSU-Equity-Fund-Growth
@@ -344,8 +387,10 @@ funds:
 - Invesco-India-PSU-Equity-Fund-Growth
 - SBI-PSU-Fund-Regular-Plan-Growth
 - ICICI-Prudential-PSU-Equity-Fund-Growth
+- Quant-PSU-Fund-Growth-Option-Regular-Plan
 #Equity:Value
 - Aditya-Birla-Sun-Life-Pure-Value-Fund-Growth-Option
+- Union-Value-Fund-Regular-Plan-Growth-Option
 - HSBC-Value-Fund-Regular-Growth
 - Axis-Value-Fund-Regular-Plan-Growth
 - Quant-Value-Fund-Growth-Option-Regular-Plan
@@ -359,8 +404,12 @@ funds:
 - UTI-Value-Fund-Regular-Plan-Growth-Option
 - LIC-MF-Long-Term-Value-Fund-Regular-Plan-Growth
 - Baroda-BNP-Paribas-Value-Fund-Regular-Plan-Growth-option
+- JM-Value-Fund-Regular-Growth-Option
+- Union-Value-Discovery-Fund-Regular-Plan-Growth-Option
+- Tata-Equity-PE-Fund-Regular-Plan-Growth-Option
 #Hybrid:Aggressive
 - ICICI-Prudential-Equity-Debt-Fund-Growth
+- JM-Aggressive-Hybrid-Fund-Regular-Growth-Option
 - Edelweiss-Aggressive-Hybrid-Fund-Plan-B-Growth-Option
 - Edelweiss-Aggressive-Hybrid-Fund-Regular-Plan-Growth-Option
 - UTI-Aggressive-Hybrid-Fund-Regular-Plan-Growth
@@ -381,6 +430,8 @@ funds:
 - SBI-Equity-Hybrid-Fund-Regular-Plan-Growth
 - Axis-Equity-Hybrid-Fund-Regular-Plan-Growth-Option
 - Quant-Absolute-Fund-Growth-Option-Regular-Plan
+- Sundaram-Aggressive-Hybrid-Fund-Formerly-Known-as-Principal-Hybrid-Equity-Fund-Growth
+- BANK-OF-INDIA-MID-SMALL-CAP-EQUITY-DEBT-FUND-REGULAR-PLAN-GROWTH
 # #Hybrid:Arbitrage
 # - SBI-Arbitrage-Opportunities-Fund-Regular-Plan-Growth
 # - Kotak-Equity-Arbitrage-Fund-Growth
@@ -402,10 +453,15 @@ funds:
 # - Mahindra-Manulife-Arbitrage-Fund-Regular-Plan-Growth
 #Hybrid:Conservative
 - HDFC-Hybrid-Debt-Fund-Growth-Plan
+- BANK-OF-INDIA-Conservative-Hybrid-Fund-Regular-Plan-Growth
 - SBI-Conservative-Hybrid-Fund-Regular-Plan-Growth
 - Kotak-Debt-Hybrid-Growth
+- UTI-Conservative-Hybrid-Fund-Regular-Plan-Growth-Option 
 - ICICI-Prudential-Regular-Savings-Fund-Plan-Growth
+- Parag-Parikh-Conservative-Hybrid-Fund-Regular-Plan-Growth
+- Kotak-Debt-Hybrid-Growth
 - HSBC-Conservative-Hybrid-Fund-Regular-Growth
+- Sundaram-Conservative-Hybrid-Fund-Formerly-Known-as-Sundaram-Debt-Oriented-Hybrid-Fund-Regular-Plan-Growth
 - Nippon-India-Hybrid-Bond-Fund-Growth-Plan
 - UTI-Conservative-Hybrid-Fund-Regular-Plan-Growth-Option
 - Franklin-India-Debt-Hybrid-Fund-Growth
@@ -418,6 +474,9 @@ funds:
 - LIC-MF-Conservative-Hybrid-Fund-Regular-Plan-Growth
 #Hybrid:Dynamic-Asset-Allocation
 - HDFC-Balanced-Advantage-Fund-Growth-Plan
+- BANK-OF-INDIA-BALANCED-ADVANTAGE-FUND-REGULAR-PLAN-GROWTH
+- Tata-Balanced-Advantage-Fund-Regular-Plan-Growth
+- Shriram-Balanced-Advantage-Fund-Regular-Growth
 - SBI-Balanced-Advantage-Fund-Regular-Plan-Growth
 - Baroda-BNP-Paribas-Balanced-Advantage-Fund-Regular-Plan-Growth-Option
 - HSBC-Balanced-Advantage-Fund-Regular-Growth
@@ -442,6 +501,8 @@ funds:
 #Hybrid:Equity-Savings
 - SBI-Equity-Savings-Fund-Regular-Plan-Growth
 - HSBC-Equity-Savings-Fund-Regular-Growth
+- Tata-Equity-Savings-Fund-Regular-Plan-Growth-Option
+- Sundaram-Equity-Savings-Fund-Formerly-Known-as-Principal-Equity-Savings-Fund-Growth-Option
 - Invesco-India-Equity-Savings-Fund-Regular-Plan-Growth
 - Kotak-Equity-Savings-Fund-Regular-Growth
 - UTI-Equity-Savings-Fund-Regular-Plan-Growth-Option
@@ -459,12 +520,15 @@ funds:
 - LIC-MF-Equity-Savings-Fund-Regular-Plan-Growth
 #Hybrid:Multi-Asset-Allocation
 - UTI-Multi-Asset-Allocation-Fund-Regular-Plan-Growth-Option
+- Tata-Multi-Asset-Opportunities-Fund-Regular-Plan-Growth
+- Mahindra-Manulife-Multi-Asset-Allocation-Fund-Regular-Plan-Growth
 - ICICI-Prudential-Multi-Asset-Fund-Growth
 - SBI-Multi-Asset-Allocation-Fund-Regular-Plan-Growth
 - Nippon-India-Multi-Asset-Fund-Regular-Plan-Growth-Option
 - Quant-Multi-Asset-Fund-GROWTH-OPTION-Regular-Plan
 - Motilal-Oswal-Multi-Asset-Fund-Regular-Plan-Growth-Option
 - HDFC-Multi-Asset-Fund-Growth-Option
+- Bajaj-Finserv-Multi-Asset-Allocation-Fund-Regular-Growth
 - Axis-Multi-Asset-Allocation-Fund-Regular-Plan-Growth-Option
 - Baroda-BNP-Paribas-Multi-Asset-Fund-Regular-Plan-Growth-Option
 - Aditya-Birla-Sun-Life-Multi-Asset-Allocation-Fund-Regular-Growth
@@ -479,6 +543,8 @@ funds:
 - HDFC-Technology-Fund-Growth-Option
 - quant-Teck-Fund-Growth-Option-Regular-Plan
 - Tata-Digital-India-Fund-Regular-Plan-Growth
+- Kotak-Technology-Fund-Regular-Plan-Growth-Option
+- Edelweiss-Technology-Fund-Regular-Plan-Growth
 #Retirement Fund
 - Aditya-Birla-Sun-Life-Retirement-Fund-The-30s-Plan-Regular-Growth
 - Aditya-Birla-Sun-Life-Retirement-Fund-The-40s-Plan-Regular-Plan-Growth
@@ -494,7 +560,14 @@ funds:
 - ICICI-Prudential-Retirement-Fund-Pure-Equity-Growth-Option
 - Nippon-India-Retirement-Fund-Income-Generation-Scheme-Growth-Plan-Growth-Option
 - Nippon-India-Retirement-Fund-Wealth-Creation-Scheme-Growth-Plan-Growth-Option
-
+- SBI-Retirement-Benefit-Fund-Aggressive-Plan-Regular-Plan-Growth
+- Tata-Retirement-Savings-Fund-Progressive-Plan-Regular-Plan-Growth-Option
+#equity: FOF Domestic
+- ICICI-Prudential-Asset-Allocator-Fund-FOF-Growth
+- HSBC-Managed-Solutions-Growth-Growth
+- Kotak-Multi-Asset-Allocator-Fund-of-Fund-Dynamic-Growth
+- Mirae-Asset-Equity-allocator-Fund-Of-Fund-Regular-Growth
+- Nippon-India-Asset-Allocator-FoF-Regular-Plan-Growth-Option
 #Index fund
 - Aditya-Birla-Sun-Life-Index-Fund-Growth-Regular-Plan
 - Bandhan-Nifty-Fund-Regular-Plan-Growth
@@ -725,7 +798,6 @@ categories:
 - 'Hybrid: Aggressive'
 - 'Hybrid: Conservative'
 - 'Equity: ELSS'
-- 'Equity: Sectoral-Technology'
 - 'Hybrid: Arbitrage'
 - 'Hybrid: Equity Savings'
 - 'Equity: Sectoral-Pharma and Healthcare'
@@ -734,6 +806,7 @@ categories:
 - 'Equity: Thematic-ESG'
 - 'Equity: Thematic-Others'
 - 'Equity: Sectoral-Infrastructure'
+- 'Equity: Sectoral-Technology'
 - 'Equity: Dividend Yield'
 - 'Equity: Thematic-Manufacturing'
 - 'Equity: Sectoral-Banking and Financial Services'
